# TimeTracking

./: .gitignore  __main__.py  app.py  db.py  pyproject.toml
documentation/: README.md
static/: app.js  style.css
templates/: index.html
timetracking.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
